fixed horizontal scrolling issue

--- a/src/routes/FarmPage/FarmPage.css
+++ b/src/routes/FarmPage/FarmPage.css
@@ -14,7 +14,7 @@
 }
 
 .farm-page__img--cover {
-  width: 100vw;
+  width: 100%;
   height: 30vw;
   object-fit: cover;
   position: relative;
